@@ -16,12 +16,14 @@
 		<javafx.version>18.0.2</javafx.version>
 
 		<javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
-		<gluonfx.maven.plugin.version>1.0.22</gluonfx.maven.plugin.version>
+		<gluonfx.maven.plugin.version>1.0.23</gluonfx.maven.plugin.version>
 		<main.class>stamfordcoop/fertilizer.MainApp</main.class>
 		<app.identifier>fertilizerapp</app.identifier>
 		<app.description>App to optimize component selection for customizing
 			field fertilizer mixes.</app.description>
 		<package.type />
+		<module.name>stamfordcoop</module.name>
+		<vendor>Stamford Farmers Cooperative</vendor>
 	</properties>
 
 	<dependencies>
@@ -87,6 +89,12 @@
 			<version>2.0.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.panteleyev</groupId>
+			<artifactId>jpackage-maven-plugin</artifactId>
+			<version>1.6.6</version>
+		</dependency>
+
 	</dependencies>
 
 	<repositories>
@@ -139,7 +147,7 @@
 				<configuration>
 					<verbose>false</verbose>
 					<target>${gluonfx.target}</target>
-					
+
 					<attachList>
 					</attachList>
 					<nativeImageArgs></nativeImageArgs>
@@ -152,7 +160,7 @@
 						<vendor>Stamford Farmers Cooperative</vendor>
 						<version>${version}</version>
 					</releaseConfiguration>
-					
+
 				</configuration>
 			</plugin>
 			<plugin>
@@ -219,6 +227,68 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<outputDirectory>target/jmods</outputDirectory>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-dependencies</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<includeScope>runtime</includeScope>
+							<outputDirectory>target/jmods</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+
+				<groupId>org.panteleyev</groupId>
+				<artifactId>jpackage-maven-plugin</artifactId>
+				<version>1.6.4</version>
+
+				<configuration>
+					<name>Fertilizer App</name>
+					<appVersion>${version}</appVersion>
+					<vendor>${vendor}</vendor>
+					<module>${module.name}/fertilizer.MainApp</module>
+					<modulePaths>
+						<modulePath>target/classes</modulePath>
+						<modulePath>target/jmods</modulePath>
+					</modulePaths>
+
+					<destination>target/dist</destination>
+					<javaOptions>
+						<option>--enable-preview</option>
+						<option>-Dfile.encoding=UTF-8</option>
+					</javaOptions>
+				</configuration>
+
+				<executions>
+
+					<execution>
+						<id>win</id>
+						<configuration>
+							<icon>icons/icon.ico</icon>
+							<winMenu>true</winMenu>
+						</configuration>
+					</execution>
+
+				</executions>
+			</plugin>
+
+
 		</plugins>
 	</build>
 
